--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-architect
+
+title: [The title of your site]
+description: [A short description of your site's purpose]
+google_analytics: [Your Google Analytics tracking ID]
