--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 theme: jekyll-theme-architect
 
-title: [The title of your site]
-description: [A short description of your site's purpose]
-google_analytics: [Your Google Analytics tracking ID]
+title: [Alexandre's page]
+description: [A place to share about my engineering projects]
